# parskip

./: .gitignore  LICENSE  README.md  parskip.cabal
src/: Main.hs  Parskip.hs
test/: Main.hs
