name:                parskip
version:             0.1.0.0
synopsis:            Simple project to parse and reformat eskip from STDIN
description:         Please see README.md
homepage:            http://github.com/githubuser/parskip#readme
license:             BSD3
license-file:        LICENSE
author:              Moritz Grauel
maintainer:          mo@notadomain.com
copyright:           2016 Moritz Grauel
category:            Tool
build-type:          Simple
cabal-version:       >=1.10

executable parskip
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       attoparsec
                     , base >= 4.7 && < 5
                     , text >= 1.2.2.0
